@@ -1,0 +1,8 @@
+#ifndef CAMERAFOLLOWCOMPONENT_H
+#define CAMERAFOLLOWCOMPONENT_H
+
+struct CameraFollowComponent {
+    CameraFollowComponent() = default;
+};
+
+#endif
