@@ -1,0 +1,12 @@
+#ifndef HEALTHCOMPONENT_H
+#define HEALTHCOMPONENT_H
+
+struct HealthComponent {
+    int healthPercentage;
+
+    HealthComponent(int healthPercentage = 0) {
+        this->healthPercentage = healthPercentage;
+    }
+};
+
+#endif
