@@ -1,0 +1,27 @@
+#ifndef PROJECTILEEMITTERCOMPONENT_H
+#define PROJECTILEEMITTERCOMPONENT_H
+
+#include <SDL2/SDL.h>
+#include <glm/glm.hpp>
+
+struct ProjectileEmitterComponent {
+    glm::vec2 projectileVelocity;
+    int repeatFrequency;
+    int projectileDuration;
+    int hitPercentDamage;
+    bool isFriendly;
+    int lastEmissionTime;
+    //bool emitting;
+
+    ProjectileEmitterComponent(glm::vec2 projectileVelocity = glm::vec2(0), int repeatFrequency = 0, int projectileDuration = 10000, int hitPercentDamage = 10, bool isFriendly = false, bool emitting = false) {
+        this->projectileVelocity = projectileVelocity;
+        this->repeatFrequency = repeatFrequency;
+        this->projectileDuration = projectileDuration;
+        this->hitPercentDamage = hitPercentDamage;
+        this->isFriendly = isFriendly;
+        this->lastEmissionTime = SDL_GetTicks();
+        //this->emitting = emitting;
+    }
+};
+
+#endif
