@@ -9,13 +9,15 @@ struct SpriteComponent {
     int width;
     int height;
     int zIndex;
+    bool isFixed;
     SDL_Rect srcRect;
 
-    SpriteComponent(std::string assetId = "", int width = 0, int height = 0, int zIndex = 0, int srcRectX = 0,  int srcRectY = 0) {
+    SpriteComponent(std::string assetId = "", int width = 0, int height = 0, int zIndex = 0, bool isFixed = false, int srcRectX = 0,  int srcRectY = 0) {
         this->assetId = assetId;
         this->width = width;
         this->height = height;
         this->zIndex = zIndex;
+        this->isFixed = isFixed;
         this->srcRect = {srcRectX, srcRectY, width, height};
     }
 };
