@@ -16,6 +16,7 @@ class Game {
         int millisecsPreviousFrame = 0;
         SDL_Window* window;
         SDL_Renderer* renderer;
+        SDL_Rect camera;
 
         std::unique_ptr<Registry> registry;
         std::unique_ptr<AssetStore> assetStore;
@@ -33,8 +34,10 @@ class Game {
         void Render();
         void Destroy();
 
-        int windowWidth;
-        int windowHeight;
+        static int windowWidth;
+        static int windowHeight;
+        static int mapWidth;
+        static int mapHeight;
 };
 
 #endif
