@@ -18,12 +18,11 @@ class DamageSystem: public System {
 
         void onCollision(CollisionEvent& event) {
             Logger::Log("The Damage system reveived an event collision between entities " + std::to_string(event.a.GetId()) + " and " + std::to_string(event.b.GetId()));
-            event.a.Kill();
-            event.b.Kill();
+            //event.a.Kill();
+            //event.b.Kill();
         }
 
         void Update() {
-            // TODO: ...
         }
 };
 
