@@ -4,10 +4,19 @@
 #include "../ECS/ECS.h"
 #include "../EventBus/EventBus.h"
 #include "../Events/KeyPressedEvent.h"
+#include "../Components/KeyboardControlledComponent.h"
+#include "../Components/SpriteComponent.h"
+#include "../Components/RigidBodyComponent.h"
+#include "../Components/ProjectileEmitterComponent.h"
+
 
 class KeyboardControlSystem: public System {
     public:
         KeyboardControlSystem() {
+            RequireComponent<KeyboardControlledComponent>();
+            RequireComponent<SpriteComponent>();
+            RequireComponent<RigidBodyComponent>();
+            //RequireComponent<ProjectileEmitterComponent>();
         }
 
         void SubscribeToEvents(std::unique_ptr<EventBus>& eventBus) {
@@ -15,9 +24,36 @@ class KeyboardControlSystem: public System {
         }
 
         void OnKeyPressed(KeyPressedEvent& event) {
-            std::string keyCode = std::to_string(event.symbol);
-            std::string keySymbol(1, event.symbol);
-            Logger::Log("Key pressed event emitted: [" + keyCode + "] " + keySymbol);
+            for (auto entity: GetSystemEntities()) {
+                const auto keyboardControl = entity.GetComponent<KeyboardControlledComponent>();
+                auto& sprite = entity.GetComponent<SpriteComponent>();
+                auto& rigidbody = entity.GetComponent<RigidBodyComponent>();
+                //auto& projectileEmitter = entity.GetComponent<ProjectileEmitterComponent>();
+
+                //projectileEmitter.emitting = false;
+                switch (event.symbol) {
+                    case SDLK_UP:
+                        rigidbody.velocity = keyboardControl.upVelocity;
+                        sprite.srcRect.y = sprite.height * 0;
+                        break;
+                    case SDLK_RIGHT:
+                        rigidbody.velocity = keyboardControl.rightVelocity;
+                        sprite.srcRect.y = sprite.height * 1;
+                        break;
+                    case SDLK_DOWN:
+                        rigidbody.velocity = keyboardControl.downVelocity;
+                        sprite.srcRect.y = sprite.height * 2;
+                        break;
+                    case SDLK_LEFT:
+                        rigidbody.velocity = keyboardControl.leftVelocity;
+                        sprite.srcRect.y = sprite.height * 3;
+                        break;
+                    //case SDLK_SPACE:
+                        //projectileEmitter.emitting = true;
+                        //break;
+                
+                }
+            }
         }
 
 };
